--- a/CV/index.html
+++ b/CV/index.html
@@ -70,6 +70,13 @@
                 
             
         </div> 
+     <div class="proyectos">
+        <h2><br><strong> Proyectos </strong>  </h2>
+
+        <p> <a href="https://github.com/28Brando07Herrera" target=“blank”> Brando Herrera Proyectos  </a>  </p>  
+
+        </div> 
+
 </div>    
 
 
