--- a/CV/index.html
+++ b/CV/index.html
@@ -85,7 +85,7 @@
 <div class="ladoizquierdo">
 </div class="imagenes">
 <div> 
-    <br><img src="imagenes/CAPTU YO.jpg" height="200px" class="imagen"alt=>
+    <br><img src="imagenes/CAPTU_YO.jpg" height="200px" class="imagen"alt=>
     <p></div>
 
 
