--- a/CV/index.html
+++ b/CV/index.html
@@ -85,7 +85,7 @@
 <div class="ladoizquierdo">
 </div class="imagenes">
 <div> 
-  <br><img src="Imagenes/CAPTU_YO" height="200px" class="imagen"alt="sdfgh">
+      <br><img src="Imagenes/CAPTU_YO.jpg" height="200px" class="imagen"alt="sdfgh">
     <p></div>
 
 
